--- a/src/nav/Nav.html
+++ b/src/nav/Nav.html
@@ -12,9 +12,12 @@ export default {
 
 <nav class="nav"
      style="width: {width};">
-    <NavItem name="database" label="Database" />
-    <NavItem name="actions and triggers" label="Actions and Triggers" />
-    <NavItem name="user interface" label="User Interface" />
+    <img src="assets/budibase-logo-white.png" class="logo" alt="budibase logo"/>
+    <NavItem name="database" label="Database" icon="database" />
+    <NavItem name="actions" label="Actions" icon="codesandbox" />
+    <NavItem name="triggers" label="Triggers" icon="zap"/>
+    <NavItem name="access levels" label="Access Levels" icon="user" />
+    <NavItem name="user interface" label="User Interface" icon="monitor"/>
 </nav>
 
 
@@ -25,6 +28,15 @@ export default {
   height: 100%;
   position: fixed;
   left: 0px;
+  background-color: var(--secondary100);
+  color: var(--darkslate);
+}
+
+.nav > img {
+  width:130px;
+  margin-bottom: 30px;
+  margin-top: 15px;
+  margin-left:10px;
 }
 
 </style>
