--- a/src/common/ComingSoon.html
+++ b/src/common/ComingSoon.html
@@ -6,12 +6,14 @@ export default {
 
 </script>
 
-<h4>Coming Sometime: {name}</h4>
+<div>
+    <h4>Coming Sometime: {name}</h4>
+</div>
 
 <style>
 
-h1 {
-    margin-top: 200px;
+h4 {
+    margin-top: 20px;
 }
 
 </style>
