--- a/src/nav/NavItem.html
+++ b/src/nav/NavItem.html
@@ -45,6 +45,9 @@ export default {
 .inner {
     padding: 0px 20px 10px 0px;
     display: inline-block;
+    border-style: solid;
+    border-width: 0 0 1px 0;
+    border-color: var(--secondary100);
 }
 
 .nav-item:hover {
@@ -60,8 +63,6 @@ export default {
 }
 
 .active {
-    border-style: solid;
-    border-width: 0 0 1px 0;
     border-color: var(--primary75);
 }
 
