--- a/src/PackageRoot.html
+++ b/src/PackageRoot.html
@@ -51,18 +51,21 @@ export default {
   
   .content-wrapper-inner {
     background-color: var(--secondary100);
+    height: 100%;
   }
 
   .content-wrapper {
     position: fixed;
+    height: 100%;
   }
 
   .content {
     border-radius: 10px 0 0 0;
     padding-left: 10px;
     background-color: var(--white);
-    overflow:auto;
+    overflow:scroll;
     top:10px;
+    height: 100%;
   }
 
   .header {
