--- a/src/nav/Nav.html
+++ b/src/nav/Nav.html
@@ -12,7 +12,7 @@ export default {
 
 <nav class="nav"
      style="width: {width};">
-    <img src="/assets/budibase-logo-white.png" class="logo" alt="budibase logo"/>
+    <img src="/assets/budibase-logo-only.png" class="logo" alt="budibase logo"/>
     <NavItem name="database" label="Database" icon="database" />
     <NavItem name="actions" label="Actions" icon="codesandbox" />
     <NavItem name="triggers" label="Triggers" icon="zap"/>
@@ -33,10 +33,10 @@ export default {
 }
 
 .nav > img {
-  width:130px;
+  width:100%;
   margin-bottom: 30px;
-  margin-top: 15px;
-  margin-left:10px;
+  margin-top: 5px;
+  margin-left:0px;
 }
 
 </style>
