--- a/src/nav/NavItem.html
+++ b/src/nav/NavItem.html
@@ -18,11 +18,10 @@ export default {
 
 </script>
 
-<div class="nav-item" 
+<div class="nav-item {navActive}" 
      on:click="setActive()">
-     <div class="inner {navActive}">
+     <div class="inner">
         <div class="icon">{@html $getIcon(icon)}</div>
-        <span>{label}</span>
     </div>
 </div>
 
@@ -40,9 +39,6 @@ export default {
 .inner {
     padding: 0px 20px 10px 0px;
     display: inline-block;
-    border-style: solid;
-    border-width: 0 0 1px 0;
-    border-color: var(--secondary100);
 }
 
 .nav-item:hover {
@@ -58,7 +54,13 @@ export default {
 }
 
 .active {
-    border-color: var(--primary75);
+    background-color: var(--slate);
+    color: var(--secondary100);
+}
+
+.active:hover {
+    background-color: var(--slate);
+    color: var(--secondary100);
 }
 
 
