--- a/src/App.html
+++ b/src/App.html
@@ -2,13 +2,8 @@
 	
 	import NoPackage from "./NoPackage.html";
 	import PackageRoot from "./PackageRoot.html";
-	
-	export default {
-		components: {
-			NoPackage, PackageRoot
-		}
-	};
 
+	import {hasAppPackage} from "./builderStore";
 </script>
 
 <div class="app-root">
