--- a/src/database/CollectionView.html
+++ b/src/database/CollectionView.html
@@ -2,13 +2,7 @@
 
 import RecordCard from "./RecordCard.html";
 
-export default {
-    computed : {
-    },
-    components: {
-        RecordCard
-    }
-};
+export let record = {};
 
 </script>
 
