--- a/src/nav/Nav.html
+++ b/src/nav/Nav.html
@@ -2,11 +2,7 @@
 
 import NavItem from "./NavItem.html";
 
-export default {
-  components: {
-    NavItem
-  }
-};
+export let width=50;
 
 </script>
 
