--- a/src/PackageRoot.html
+++ b/src/PackageRoot.html
@@ -6,16 +6,10 @@ import UserInterface from "./userInterface/UserInterfaceRoot.html" ;
 import ActionsAndTriggers from "./actionsAndTriggers/ActionsAndTriggersRoot.html" ;
 import ComingSoon from "./common/ComingSoon.html";
 
-export default {
-  components: {
-    Nav, Database, UserInterface,
-    ActionsAndTriggers, ComingSoon
-  },
+import {activeNav} from "./builderStore";
 
-  data : () => ({
-    navWidth: "50px"
-  })
-};
+export let navWidth = "50px";
+
 
 </script>
 
@@ -26,13 +20,13 @@ export default {
     <div class="content">    
       {#if $activeNav === "database"}
       <Database />
-      {:elseif $activeNav === "actions"}
+      {:else if $activeNav === "actions"}
       <ActionsAndTriggers />
-      {:elseif $activeNav === "triggers"}
+      {:else if $activeNav === "triggers"}
       <ComingSoon name="Triggers"/>
-      {:elseif $activeNav === "access levels"}
+      {:else if $activeNav === "access levels"}
       <ComingSoon name="Access Levels" />
-      {:elseif $activeNav === "user interface"}
+      {:else if $activeNav === "user interface"}
       <UserInterface />
       {/if}
     </div>
