--- a/src/database/HeirarchyRow.html
+++ b/src/database/HeirarchyRow.html
@@ -1,25 +1,20 @@
 <script>
 
-export default {
-    data() {
-        return ({
-            isExpanded:true,
-            level:0
-        })
-    }
-};
+import {selectedNode} from "../builderStore";
+
+export let level = 0;
+export let node = {};
 
 </script>
 
 <div class="root">
-    <div class="title" on:click="$set({selectedNode:node})" style="padding-left: {20 + (level * 20)}px">
+    <div class="title" on:click={() => $selectedNode=node} style="padding-left: {20 + (level * 20)}px">
         {node.name}
     </div>
     {#if node.children}
     {#each node.children as child}
     <svelte:self node={child} 
-                    isExpanded={true}
-                    level={level+1}/>
+                 level={level+1}/>
     {/each}
     {/if}
 </div>
