filling out record view

--- a/src/database/DatabaseRoot.html
+++ b/src/database/DatabaseRoot.html
@@ -50,10 +50,13 @@ import getIcon from "../common/icon";
     flex: 0 1 auto;
     width: 200px;
     background-color: var(--primary10);
+    overflow-y: auto;
+    height: 100%;
 }
 
 .node-container {
     flex: 1 1 auto;
+    overflow-y: auto;
 }
 
 .heirarchy-title-row {
