--- a/src/PackageRoot.html
+++ b/src/PackageRoot.html
@@ -14,22 +14,20 @@ export let navWidth = "50px";
 </script>
 
 <div class="root">
-  <Nav width={navWidth}/>
-  <div class="content-wrapper" 
-       style="width: calc(100% - {navWidth}); left: {navWidth}">
-    <div class="content">    
-      {#if $activeNav === "database"}
-      <Database />
-      {:else if $activeNav === "actions"}
-      <ActionsAndTriggers />
-      {:else if $activeNav === "triggers"}
-      <ComingSoon name="Triggers"/>
-      {:else if $activeNav === "access levels"}
-      <ComingSoon name="Access Levels" />
-      {:else if $activeNav === "user interface"}
-      <UserInterface />
-      {/if}
-    </div>
+  <Nav width={navWidth} />
+  <div class="content" 
+       style="width: calc(100% - {navWidth}); left: {navWidth}"> 
+    {#if $activeNav === "database"}
+    <Database />
+    {:else if $activeNav === "actions"}
+    <ActionsAndTriggers />
+    {:else if $activeNav === "triggers"}
+    <ComingSoon name="Triggers"/>
+    {:else if $activeNav === "access levels"}
+    <ComingSoon name="Access Levels" />
+    {:else if $activeNav === "user interface"}
+    <UserInterface />
+    {/if}
   </div>
 </div>
 
@@ -41,16 +39,11 @@ export let navWidth = "50px";
 	}
   
 
-  .content-wrapper {
+  .content {
     position: fixed;
     height: 100%;
-  }
-
-  .content {
     background-color: var(--white);
-    overflow-y:scroll;
-    top:10px;
-    height: 100%;
+    margin:0;
   }
 
 
